# hw06-markyang0613

./: conf.py  index.ipynb  setup.cfg  setup.py
.ipynb_checkpoints/: Makefile-checkpoint  _config-checkpoint.yml  hw06-description-checkpoint.md  index-checkpoint.ipynb  setup-checkpoint.cfg
ligotools/: utils.py
ligotools/test/: tests_readligo.py
test/: tests_readligo.py
