[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Mark Yang
author_email     = ricky0613@berkeley.edu
description      = Python library used to read LIGO files
long_description = file: README.md
long_description_content_type = text/markdown
keyword          = ligo
license          = BSD 3-Clause License
classifiers      =
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires =
    numpy
    scipy
    matplotlib
    h5py
    tqdm

[options.packages.find]
exclude =
    examples*
    docs*